<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_PACK_DuplicatesCheck" Id="{50b93cc6-907f-46ed-b372-b197878e8114}">
    <Declaration><![CDATA[TYPE ST_PACK_DuplicatesCheck :
STRUCT
	sPackcode				: T_PACK_Barcode;
	nPackIndex				: INT;
	nOuterIndex				: INT;
	nPackRejectID				: UINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>