<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_test" Id="{f8ade7aa-a224-4905-8a6d-e3267b15a9b2}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	//aCase	: ARRAY[1..3] OF ST_LAB_OuterData ;
	stCase	:	ST_LAB_CaseData; 

	
// 	aInputArray		: ARRAY[1..3, 1..3] OF T_MaxString := [ 
// 	['PACK01OUTER1', 'PACK02OUTER1', 'PACK03OUTER1'],
// 	['PACK01OUTER2', 'PACK02OUTER2', 'PACK03OUTER2'],
// 	['PACK01OUTER3', 'PACK02OUTER3', 'PACK03OUTER3']
// 	];

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>